# nuxt-with-custom-backend

./: README.md
backend-python/: alembic.ini  db.sqlite  justfile  pyproject.toml
backend-python/app/: dependencies.py  main.py
backend-python/app/core/: config.py  database.py  middleware.py  password_hash.py
backend-python/app/crud/: note_crud.py  session_crud.py  user_crud.py
backend-python/app/model/: note.py  user.py
backend-python/app/models/: __init__.py  note_model.py  session_model.py  user_model.py
backend-python/app/routers/: auth.py  health.py  note.py  sanctum.py  user.py
backend-python/app/schemas/: note_schema.py  response_schema.py  session_schema.py  user_schema.py
backend-python/app/usecase/: note_usecase.py  (+2 more)
backend-python/migrations/: env.py  script.py.mako
backend-rust/: .env  .gitignore  Cargo.toml  config.toml  justfile
backend-rust/.sqlx/: query-11672899ac371c1712502f3c530244c56ec3eae200db4e66a5abd6127178cbc3.json  query-1e69ad73f13f7933da1d22a3bda88ebb8d1ee98cc54fbe1342b491487ccd9c32.json  query-268c68eb803a13169e94d4bef22d87c608a4af93781c02e999588c7ffc95ecc6.json  query-2dbbe61bb249c93ca188f23eb9b819088b5b120fdc192d88237df6703122e4e4.json  query-74ee2e5fbb3edb4949d93c58456f47e925feed47fbda05f35f85c60e54464de9.json  query-934cadad3291ba08406f1cdbdd5c82d693cfdbc5957a51b4cd7934b6f0fab6a9.json  query-95b43cc52fab196aab6ce12c8f88f385ed861f9de6c173dfd2a7351c43c833ce.json  query-ce9a2015827e467645067ac8b638abefb1503318bce9c58ccc72d03f1a992d4a.json  query-d02f14955a49ad3dd25edb71d3c4dc1378b3d2941bd2dfaa9085b802cef35188.json  query-d584e9f19d33d9b3edfb7d8838f1368cdb9402df6b5e487f0f9a9842aed10589.json  query-e8b6552470d9a8c3ad0b6b1f2b1d85c8fbc4a31c38bbd7c23896e071bd48eed0.json
backend-rust/migrations/: 20250701235532_create_users_table.up.sql  20250701235623_create_notes_table.up.sql  20250701235633_create_sessions_table.up.sql
backend-rust/src/: errors.rs  lib.rs  main.rs
(+240 files in other folders)
