[package]
name = "backend-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
argon2 = { version = "0.5.3", features = ["std"] }
axum = { version = "0.8.4", features = ["macros"] }
chrono = "0.4.41"
futures = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.6", features = [
  "runtime-tokio",
  "chrono",
  "sqlite",
  "uuid",
  "migrate",
  "derive",
] }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
uuid = { version = "1.17.0", features = ["v7"] }
validator = { version = "0.20.0", features = ["derive"] }
